Успісшо підключено API Whitebit

--- a/.env
+++ b/.env
@@ -1,21 +1,49 @@
 
-BINANCE_API_KEY=your_binance_api_key
-BINANCE_SECRET_KEY=your_binance_secret_key
-MEXC_API_KEY=your_mexc_api_key
-MEXC_SECRET_KEY=your_mexc_secret_key
-
+# WhiteBit спот торгівля
 WHITEBIT_API_KEY=caecf19a47f3ae07b04a5a3da830598e
-WHITEBIT_SECRED_KEY=561f7fbf901c8e3d5e48d3940508a4b5
+WHITEBIT_SECRET_KEY=561f7fbf901c8e3d5e48d3940508a4b5
 
-# Налаштування торгівлі
-TRADING_ENABLED=true
+
+# ===== НАЛАШТУВАННЯ РИЗИКІВ =====
+# Максимальний розмір однієї позиції в USDT
 MAX_POSITION_SIZE=10
-RISK_PERCENTAGE=2
-LEVERAGE=10
 
-# Налаштування WebSocket
+# Відсоток від балансу для ризику на одну торгівлю (1-10%)
+RISK_PERCENTAGE=2
+
+# Максимальні щоденні збитки в USDT
+MAX_DAILY_LOSS=5000
+
+# ===== СЕРВЕР НАЛАШТУВАННЯ =====
+# Порт для веб-сервера
+PORT=3000
+
+# Середовище (development або production)
+NODE_ENV=development
+
+# ===== WEBSOCKET НАЛАШТУВАННЯ =====
+# Затримка перед повторним підключенням (мс)
 WS_RECONNECT_DELAY=5000
+
+# Максимальна кількість спроб перепідключення
 MAX_RECONNECT_ATTEMPTS=10
 
-# Налаштування веб-сервера
-PORT=3000
+# ===== ЛОГУВАННЯ =====
+# Рівень логування (error, warn, info, debug)
+LOG_LEVEL=info
+
+# ===== СТРАТЕГІЇ НАЛАШТУВАННЯ =====
+# Увімкнути DCA стратегію (true/false)
+ENABLE_DCA_STRATEGY=false
+
+# Увімкнути Grid стратегію (true/false)
+ENABLE_GRID_STRATEGY=false
+
+# Відсоток падіння для DCA стратегії
+DCA_DROP_PERCENTAGE=5
+
+# Кількість рівнів для Grid стратегії
+GRID_LEVELS=5
+
+# Відстань між рівнями Grid (%)
+GRID_SPACING=2
