--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
-
 {
-  "name": "crypto-futures-bot",
+  "name": "whitebit-trading-bot",
   "version": "1.0.0",
-  "description": "Торговий бот для фючерсної торгівлі на Binance та MEXC",
+  "description": "Торговий бот для WhiteBit біржі",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "whitebit": "node index.js",
+    "test": "echo 'Тести поки не налаштовані' && exit 0"
   },
   "dependencies": {
-    "node-binance-api": "^0.13.1",
     "axios": "^1.4.0",
-    "ccxt": "^4.0.0",
     "ws": "^8.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
     "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "keywords": [
+    "whitebit",
+    "trading",
+    "bot",
+    "crypto",
+    "ukraine"
+  ],
+  "author": "",
+  "license": "MIT"
 }
