почистив dashboard.js, успішний запуск додатку

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ WHITEBIT_API_KEY=caecf19a47f3ae07b04a5a3da830598e
 WHITEBIT_SECRET_KEY=561f7fbf901c8e3d5e48d3940508a4b5
 
 
+DB_HOST=164.92.139.111
+DB_USER=remote_root
+DB_PASSWORLD=aR9^zN(chG4$wV6
+DB_DATABASE=market_bot
+
 # ===== НАЛАШТУВАННЯ РИЗИКІВ =====
 # Максимальний розмір однієї позиції в USDT
 MAX_POSITION_SIZE=10
