--- a/.env
+++ b/.env
@@ -5,8 +5,9 @@ WHITEBIT_SECRET_KEY=561f7fbf901c8e3d5e48d3940508a4b5
 
 
 DB_HOST=164.92.139.111
+DB_PORT=5432
 DB_USER=remote_root
-DB_PASSWORLD=aR9^zN(chG4$wV6
+DB_PASSWORD=aR9^zN(chG4$wV6
 DB_DATABASE=market_bot
 
 # ===== НАЛАШТУВАННЯ РИЗИКІВ =====
