Налаштування зберігаються в базу данних

--- a/.env
+++ b/.env
@@ -10,6 +10,16 @@ DB_USER=remote_root
 DB_PASSWORD=aR9^zN(chG4$wV6
 DB_DATABASE=market_bot
 
+
+# ========================================
+# TELEGRAM (опціонально)
+# ========================================
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_telegram_chat_id
+
+
+
+
 # ===== НАЛАШТУВАННЯ РИЗИКІВ =====
 # Максимальний розмір однієї позиції в USDT
 MAX_POSITION_SIZE=10
